Fix overflow on mobile in RTL layout

--- a/packages/scrabble-solver/src/styles/mixins.scss
+++ b/packages/scrabble-solver/src/styles/mixins.scss
@@ -151,6 +151,7 @@ $media-expressions: (
     &:nth-child(3) {
       input {
         left: -200%;
+        right: 0;
         clip-path: polygon((200% / 3) (100% / 3), 100% (100% / 3), 100% (200% / 3), (200% / 3) (200% / 3));
       }
     }
@@ -160,6 +161,7 @@ $media-expressions: (
     &:nth-last-child(3) {
       input {
         left: 0;
+        right: -200%;
         clip-path: polygon(0 (100% / 3), (100% / 3) (100% / 3), (100% / 3) (200% / 3), 0 (200% / 3));
       }
     }
